2005-06-03  Stepan Kasal  <kasal@ucw.cz>

	* tests/Makefile.am (check_SCRIPTS): Set to $(wrappers).
	(DISTCLEANFILES): Remove $(check_SCRIPTS).
	(testsuite): Make sure autotest.m4f is up-to-date before using it.

2005-06-02  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autotest/general.m4 (AT_INIT): Don't create a regular
	expression of unbounded size when processing the --list
	option.  This runs afoul of a limit of 399 bytes per regular
	expression on AIX.  Problem reported by Ralf Wildenhues.

2005-06-01  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Note yesterday's changes to AC_SUBST and AC_SUBST_FILE.
	* doc/autoconf.texi (Particular Headers): Reword example
	for multiline stdbool replacement.
	(Setting Output Variables): Reword text a bit.  Don't
	give all the details about |#_!!_#|.
	Reword description of line replacement.

2005-05-31  Dan Manthey  <dan_manthey@partech.com>

	* lib/autoconf/status.m4 (_AC_OUTPUT_FILES): Output variables may
	now contain newlines, and substituted files must be referenced on
	a line alone; the sed scripts to substitute them are now very
	different.
	(_AC_SED_CMD_LIMIT): Added; single place to store limit on how many
	commands can be put in a sed script portably.
	* doc/autoconf.texi (Setting Output Variables): Document above
	changes.  (Particular Header Checks) <AC_HEADER_STDBOOL>: Give exaple
	use of multiline substitution.
	* tests/torture.at: No longer expect substitution of newline to fail.

2005-05-27  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/m4sugar/m4sh.m4 (_AS_SHELL_FN_WORK): Fix diagnostics.
	From Ralf Menzel (trivial change).

2005-05-25  Paul Eggert  <eggert@cs.ucla.edu>

	* tests/local.at: Don't attempt to check for negated character
	classes in shell scripts.  The test was too brittle.

2005-05-25  Stepan Kasal  <kasal@ucw.cz>

	* bin/autoconf.as: Don't use "shift 2"; it's not portable enough.
	* doc/autoconf.texi (Limitations of Builtins): Document this
	  limitation.

2005-05-24  Stepan Kasal  <kasal@ucw.cz>
