@@ -1,3 +1,9 @@
+2005-06-03  Steven G. Johnson  <stevenj@alum.mit.edu>
+
+	* lib/autoconf/fortran.m4 (_AC_PROG_FC): Find g95 in addition
+	to gfortran, and make these the first two compiler names
+	checked (following the general autoconf preference for gcc).
+
 2005-06-03  Stepan Kasal  <kasal@ucw.cz>
 
 	* tests/Makefile.am (check_SCRIPTS): Set to $(wrappers).
